12 de Abril de 2016 Ximena Valero Modificación de las pantallas en personal EmplVigenciasTiposContratos, EmplAfiliaciones, emplnormalaboral y emplacumulados
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
@@ -156,7 +156,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 220px; margin: -14px; height: 26px; border: none; color: blue" id="fooTerceroVA" actionListener="#{controlTercero.recibirPaginaEntrante('atrasterceroemplvigenciaafiliacion3')}" action="terceroemplvigenciaafiliacion3" value=""/>
+                                        <p:commandButton style="width: 220px; margin: -14px; height: 26px; border: none; color: blue" id="fooTerceroVA" action="terceroemplvigenciaafiliacion3" value=""/>
                                     </f:facet>
                                 </p:column>
 
